# todo-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.envs/: .env.db.example
app/: main.py
app/core/: settings.py
app/interface/rest/: api_router.py
app/interface/rest/v1/: router.py
